force-app/main/default/objects/Financial_Information__c.object
<CustomObject>
    <description>To record the invoice/receipt requirements of parents/companies and the bank account information of employees</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Office_Notes__c</fullName>
        <label>Accounting Office Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Details_Company__c</fullName>
        <formula>Related_Company_Financial_Info__r.Bank_Details__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Details_Local_Language_Company__c</fullName>
        <formula>Related_Company_Financial_Info__r.Bank_Details_Local_Language__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Details Local Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Details_Local_Language__c</fullName>
        <label>Bank Details Local Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Details__c</fullName>
        <label>Bank Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Bank_Address__c</fullName>
        <label>Beneficiary Bank Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Bank_Country__c</fullName>
        <label>Beneficiary Bank Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Bank_Name__c</fullName>
        <label>Beneficiary Bank Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Name__c</fullName>
        <label>Beneficiary Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name_Formula__c</fullName>
        <formula>IF( 
   Related_Company_Financial_Info__c = &quot;&quot;, 
   &quot;N/A&quot;, 
   HYPERLINK(&quot;/&quot;&amp;Related_Company_Financial_Info__r.Related_to__r.Id, Related_Company_Financial_Info__r.Related_to__r.Name, &quot;_self&quot;)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Can only be changed by selecting the relevant company Financial Information record in the &apos;Related Record&apos; field above</inlineHelpText>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deletion_Prevention__c</fullName>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deletion Prevention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fees_Responsible_For_Company__c</fullName>
        <formula>IF(
   Related_Company_Financial_Info__c = &quot;&quot;, 
   &quot;N/A&quot;, 
   Related_Company_Financial_Info__r.Fees_Responsible_For_Text__c
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Set in company financial information &apos;Related Record&apos;</inlineHelpText>
        <label>Fees Responsible For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fees_Responsible_For_Text__c</fullName>
        <formula>IF(INCLUDES(Fees_Responsible_For__c, &quot;All Applicable&quot;), &quot;All Applicable; &quot;, NULL) +
IF(INCLUDES(Fees_Responsible_For__c, &quot;All Applicable (Shared)&quot;), &quot;All Applicable (Shared); &quot;, NULL) +
IF(INCLUDES(Fees_Responsible_For__c, &quot;Tuition&quot;), &quot;Tuition; &quot;, NULL) + 
IF(INCLUDES(Fees_Responsible_For__c, &quot;Tuition (Shared)&quot;), &quot;Tuition (Shared); &quot;, NULL) + 
IF(INCLUDES(Fees_Responsible_For__c, &quot;Lunch&quot;), &quot;Lunch; &quot;, NULL) + 
IF(INCLUDES(Fees_Responsible_For__c, &quot;Lunch (Shared)&quot;), &quot;Lunch (Shared); &quot;, NULL) + 
IF(INCLUDES(Fees_Responsible_For__c, &quot;Uniform&quot;), &quot;Uniform; &quot;, NULL) +
IF(INCLUDES(Fees_Responsible_For__c, &quot;Uniform (Shared)&quot;), &quot;Uniform (Shared); &quot;, NULL) + 
IF(INCLUDES(Fees_Responsible_For__c, &quot;Bus&quot;), &quot;Bus; &quot;, NULL) + 
IF(INCLUDES(Fees_Responsible_For__c, &quot;Bus (Shared)&quot;), &quot;Bus (Shared); &quot;, NULL) + 
IF(INCLUDES(Fees_Responsible_For__c, &quot;EAL Language / Support&quot;), &quot;EAL Language / Support; &quot;, NULL) + 
IF(INCLUDES(Fees_Responsible_For__c, &quot;EAL Language / Support (Shared)&quot;), &quot;EAL Language / Support (Shared); &quot;, NULL) + 
IF(INCLUDES(Fees_Responsible_For__c, &quot;Extra Programmes (ASAs etc.)&quot;), &quot;Extra Programmes (ASAs etc.); &quot;, NULL) +
IF(INCLUDES(Fees_Responsible_For__c, &quot;Extra Programmes (ASAs etc.) (Shared)&quot;), &quot;Extra Programmes (ASAs etc.) (Shared); &quot;, NULL) +
IF(INCLUDES(Fees_Responsible_For__c, &quot;Fee Required For Enrolment&quot;), &quot;Fee Required For Enrolment; &quot;, NULL) + 
IF(INCLUDES(Fees_Responsible_For__c, &quot;Fee Required For Enrolment (Shared)&quot;), &quot;Fee Required For Enrolment (Shared); &quot;, NULL) + 
IF(INCLUDES(Fees_Responsible_For__c, &quot;Annual Enrolment&quot;), &quot;Annual Enrolment; &quot;, NULL) + 
IF(INCLUDES(Fees_Responsible_For__c, &quot;Annual Enrolment (Shared)&quot;), &quot;Annual Enrolment (Shared); &quot;, NULL) + 
IF(INCLUDES(Fees_Responsible_For__c, &quot;Annual Capital Contribution&quot;), &quot;Annual Capital Contribution; &quot;, NULL) + 
IF(INCLUDES(Fees_Responsible_For__c, &quot;Annual Capital Contribution (Shared)&quot;), &quot;Annual Capital Contribution (Shared); &quot;, NULL) + 
IF(INCLUDES(Fees_Responsible_For__c, &quot;None&quot;), &quot;None; &quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fees Responsible For (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fees_Responsible_For__c</fullName>
        <label>Fees Responsible For</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Applicable</fullName>
                </value>
                <value>
                    <fullName>All Applicable (Shared)</fullName>
                </value>
                <value>
                    <fullName>Tuition</fullName>
                </value>
                <value>
                    <fullName>Tuition (Shared)</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Lunch (Shared)</fullName>
                </value>
                <value>
                    <fullName>Uniform</fullName>
                </value>
                <value>
                    <fullName>Uniform (Shared)</fullName>
                </value>
                <value>
                    <fullName>Bus</fullName>
                </value>
                <value>
                    <fullName>Bus (Shared)</fullName>
                </value>
                <value>
                    <fullName>EAL / Language Support</fullName>
                </value>
                <value>
                    <fullName>EAL / Language Support (Shared)</fullName>
                </value>
                <value>
                    <fullName>Extra Programmes (ASAs etc.)</fullName>
                </value>
                <value>
                    <fullName>Extra Programmes (ASAs etc.) (Shared)</fullName>
                </value>
                <value>
                    <fullName>Fee Required For Enrolment</fullName>
                </value>
                <value>
                    <fullName>Fee Required For Enrolment (Shared)</fullName>
                </value>
                <value>
                    <fullName>Annual Enrolment</fullName>
                </value>
                <value>
                    <fullName>Annual Enrolment (Shared)</fullName>
                </value>
                <value>
                    <fullName>Annual Capital Contribution</fullName>
                </value>
                <value>
                    <fullName>Annual Capital Contribution (Shared)</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <label>IBAN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Currency_Company__c</fullName>
        <formula>IF(
   Related_Company_Financial_Info__c = &quot;&quot;, 
   &quot;N/A&quot;, 
   TEXT(Related_Company_Financial_Info__r.Invoice_Currency__c)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Set in company financial information &apos;Related Record&apos;</inlineHelpText>
        <label>Invoice Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Currency__c</fullName>
        <label>Invoice Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>MMK</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>UZS</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Frequency_Company__c</fullName>
        <formula>IF(
   Related_Company_Financial_Info__c = &quot;&quot;, 
   &quot;N/A&quot;, 
   TEXT(Related_Company_Financial_Info__r.Invoice_Frequency__c)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Set in company financial information &apos;Related Record&apos;</inlineHelpText>
        <label>Invoice Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Frequency__c</fullName>
        <label>Invoice Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Termly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoicing_Requirements_Company__c</fullName>
        <formula>IF(
   Related_Company_Financial_Info__c = &quot;&quot;, 
   &quot;N/A&quot;, 
   Related_Company_Financial_Info__r.Invoicing_Requirements__c
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Set in company financial information &apos;Related Record&apos;</inlineHelpText>
        <label>Invoicing Requirements</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoicing_Requirements__c</fullName>
        <inlineHelpText>Any additional requirements specific to the Parent/Company defined in the &quot;Related to&quot; field</inlineHelpText>
        <label>Invoicing Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mass_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Information_Instructions__c</fullName>
        <label>Other Information/Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Company_Financial_Info__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the &apos;Financial Information&apos; record of the related company. To search by name, type the name of the company in the pop-up and then select the &apos;All Fields&apos; option before clicking the &apos;Go&apos; button. Remember to use * as a wildcard if required.</inlineHelpText>
        <label>Related Record</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or is not a company.</errorMessage>
            <filterItems>
                <field>Financial_Information__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Company_Financial_Information</value>
            </filterItems>
            <infoMessage>To search by company name, type the name of the company in the search box and select the &apos;All Fields&apos; option before clicking the &apos;Go&apos; button. Remember to use * as a wildcard if required.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Financial_Information__c</referenceTo>
        <relationshipLabel>Families Related To</relationshipLabel>
        <relationshipName>Financial_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_To_Text__c</fullName>
        <description>Populated by means of a workflow rule/field update/process, displays the &apos;Related To&apos; value in a text field so that a financial information record can be searched for by the parent/company it&apos;s related to as well as record name (which isn&apos;t that useful) e.g. FI-XXXXX NB. &apos;All Fields&apos; radio button must be selected in relevant lookup dialog.</description>
        <label>Related To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_to_Record_Type__c</fullName>
        <formula>Related_to__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related to Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_to__c</fullName>
        <label>Related to</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Information</relationshipLabel>
        <relationshipName>Financial_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Salary_Payment_Currency__c</fullName>
        <inlineHelpText>The currency that the salary is paid in (not necessarily the currency of the staff member&apos;s bank account or the contract currency)</inlineHelpText>
        <label>Salary Payment Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>UZS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>IF(Related_to__r.RecordType.Name = &quot;Company&quot;, Related_to__r.Company_School__c,  Related_to__r.SchoolText__pc)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Separate_Invoices_by_Family__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls how invoices for this company are generated from fee assignments. Used in the relevant Apex Class</description>
        <inlineHelpText>Tick this box if you want to generate a different invoice for each family linked to this company whenever invoices are generated in accordance with dates setup on the relevant student fee assignments.</inlineHelpText>
        <label>Separate Invoices by Family</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shared_Fee_Breakdown_Details_Company__c</fullName>
        <formula>IF(
   Related_Company_Financial_Info__c = &quot;&quot;, 
   &quot;N/A&quot;, 
   Related_Company_Financial_Info__r.Shared_Fee_Breakdown_Details__c
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Set in company financial information &apos;Related Record&apos;</inlineHelpText>
        <label>Shared Fee Breakdown/Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_Fee_Breakdown_Details__c</fullName>
        <inlineHelpText>Please provide details of the breakdown between parent and company (e.g. Tuition: 75% company, 25% parent)</inlineHelpText>
        <label>Shared Fee Breakdown/Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sort_Code__c</fullName>
        <inlineHelpText>Digits only - remove any spaces or hyphens</inlineHelpText>
        <label>Sort Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Swift_Address_BIC__c</fullName>
        <label>Swift Address/BIC</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Financial Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Related_to__c</columns>
        <columns>Invoice_Currency__c</columns>
        <columns>Invoice_Frequency__c</columns>
        <columns>Fees_Responsible_For__c</columns>
        <columns>Invoicing_Requirements__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FI-{YY}{00000}</displayFormat>
        <label>Financial Information</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Information</pluralLabel>
    <recordTypes>
        <fullName>Company_Financial_Information</fullName>
        <active>true</active>
        <description>For the invoice and receipt information of companies</description>
        <label>Company Financial Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parent_Financial_Information</fullName>
        <active>true</active>
        <description>For the invoice and receipt information of parents</description>
        <label>Parent Financial Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_Member_Financial_Information</fullName>
        <active>true</active>
        <description>For the financial/bank information of staff members</description>
        <label>Staff Member Financial Information</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Ensure_Shared_Desc_with_Shared_Fees</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
       INCLUDES(Fees_Responsible_For__c, &quot;All Applicable (Shared)&quot;),
       INCLUDES(Fees_Responsible_For__c, &quot;Tuition (Shared)&quot;),
       INCLUDES(Fees_Responsible_For__c, &quot;Lunch (Shared)&quot;),
       INCLUDES(Fees_Responsible_For__c, &quot;Uniform (Shared)&quot;),
       INCLUDES(Fees_Responsible_For__c, &quot;Bus (Shared)&quot;),
       INCLUDES(Fees_Responsible_For__c, &quot;EAL / Language Support (Shared)&quot;),
       INCLUDES(Fees_Responsible_For__c, &quot;Extra Programmes (ASAs etc.) (Shared)&quot;),
       INCLUDES(Fees_Responsible_For__c, &quot;Fee Required For Enrolment (Shared)&quot;),
       INCLUDES(Fees_Responsible_For__c, &quot;Annual Enrolment (Shared)&quot;),
       INCLUDES(Fees_Responsible_For__c, &quot;Annual Capital Contribution (Shared)&quot;)
       ),
     ISBLANK(Shared_Fee_Breakdown_Details__c)
     )</errorConditionFormula>
        <errorMessage>You have indicated that some of the fees are to be shared so please provide details in the &apos;Shared Fee Breakdown/Details&apos; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_Shared_Fees_with_Shared_Desc</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(INCLUDES(Fees_Responsible_For__c, &quot;All Applicable (Shared)&quot;)),
    NOT(INCLUDES(Fees_Responsible_For__c, &quot;Tuition (Shared)&quot;)),
    NOT(INCLUDES(Fees_Responsible_For__c, &quot;Lunch (Shared)&quot;)),
    NOT(INCLUDES(Fees_Responsible_For__c, &quot;Uniform (Shared)&quot;)),
    NOT(INCLUDES(Fees_Responsible_For__c, &quot;Bus (Shared)&quot;)),
    NOT(INCLUDES(Fees_Responsible_For__c, &quot;EAL / Language Support (Shared)&quot;)),
    NOT(INCLUDES(Fees_Responsible_For__c, &quot;Extra Programmes (ASAs etc.) (Shared)&quot;)),
    NOT(INCLUDES(Fees_Responsible_For__c, &quot;Fee Required For Enrolment (Shared)&quot;)),
    NOT(INCLUDES(Fees_Responsible_For__c, &quot;Annual Enrolment (Shared)&quot;)),
    NOT(INCLUDES(Fees_Responsible_For__c, &quot;Annual Capital Contribution (Shared)&quot;)),
    NOT(ISBLANK(Shared_Fee_Breakdown_Details__c))
    )</errorConditionFormula>
        <errorMessage>You cannot add &apos;Shared Fee Breakdown/Details&apos; if you have not indicated which of the fees are to be shared.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Invalid_Related_To</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   AND(     
       $User.Id != &quot;0056F000008t9Xb&quot;,
       ISNEW(),
       RecordType.DeveloperName = &quot;Parent_Financial_Information&quot;,
       Related_to__r.RecordType.DeveloperName != &quot;PersonAccount&quot;
       ),
   AND( 
       NOT(ISNEW()),
       RecordType.DeveloperName = &quot;Parent_Financial_Information&quot;,
       Related_to__r.RecordType.DeveloperName != &quot;PersonAccount&quot; 
       ),
   AND( 
       RecordType.DeveloperName = &quot;Company_Financial_Information&quot;,
       Related_to__r.RecordType.DeveloperName != &quot;Company_Account&quot;
       ),
   AND( 
       RecordType.DeveloperName = &quot;Staff_Member_Financial_Information&quot;,
       Related_to__r.RecordType.DeveloperName != &quot;Staff_Account&quot;,
       Related_to__r.RecordType.DeveloperName != &quot;Staff_Member_Group_Level&quot;
       )
   )</errorConditionFormula>
        <errorMessage>You cannot relate this type of financial information record to the account selected in the &apos;Related To&apos; field. Please select another.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Multiple_Submissions_By_Parent</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
    $User.Id = &quot;0056F000008t9Xb&quot;, 
    NOT(ISNEW())
    )</errorConditionFormula>
        <errorMessage>We already have your invoicing information on file. If you wish to change the information provided previously then please send an email detailing the required changes to the person who sent you this form. This form cannot be used to make these changes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Fees_Responsible_For_Selection1</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   AND(
       School__c != &quot;The British School of Navarra&quot;,
       OR(
          INCLUDES(Fees_Responsible_For__c, &quot;Annual Capital Contribution&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;Annual Capital Contribution (Shared)&quot;) 
          )
       ),
   AND(
       School__c != &quot;The British School of Tashkent&quot;,
       School__c != &quot;The British School of Navarra&quot;,
       OR(
          INCLUDES(Fees_Responsible_For__c, &quot;Annual Enrolment&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;Annual Enrolment (Shared)&quot;)
          )
       ),
   AND(
       School__c != &quot;The British International School of Kuala Lumpur&quot;,
       School__c != &quot;The British School of Nanjing&quot;,
       School__c != &quot;The International School of Moscow&quot;,
       School__c != &quot;Nord Anglia International School Manila&quot;,
       School__c != &quot;The British School Yangon&quot;,
       School__c != &quot;The British Schools Foundation&quot;,
       OR(
          INCLUDES(Fees_Responsible_For__c, &quot;Bus&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;Bus (Shared)&quot;)
          )
       ),
   AND(
       School__c != &quot;The British International School of Kuala Lumpur&quot;,
       School__c != &quot;The British School of Nanjing&quot;,
       School__c != &quot;The International School of Moscow&quot;,
       School__c != &quot;Nord Anglia International School Manila&quot;,
       School__c != &quot;The British School Yangon&quot;,
       School__c != &quot;The British College of Brazil&quot;,
       School__c != &quot;The British School of Brasilia&quot;,
       School__c != &quot;The British Schools Foundation&quot;,
       OR(
          INCLUDES(Fees_Responsible_For__c, &quot;EAL / Language Support&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;EAL / Language Support (Shared)&quot;)
          )
       )
   )</errorConditionFormula>
        <errorMessage>You have selected a &apos;Fees Responsible For&apos; value that is not valid for your school. Please check and adjust your selection.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Fees_Responsible_For_Selection2</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   AND(
       INCLUDES(Fees_Responsible_For__c, &quot;All Applicable&quot;),
       INCLUDES(Fees_Responsible_For__c, &quot;All Applicable (Shared)&quot;)
       ),
   AND(
       INCLUDES(Fees_Responsible_For__c, &quot;Tuition&quot;),
       INCLUDES(Fees_Responsible_For__c, &quot;Tuition (Shared)&quot;)
       ),
   AND(
       INCLUDES(Fees_Responsible_For__c, &quot;Lunch&quot;),
       INCLUDES(Fees_Responsible_For__c, &quot;Lunch (Shared)&quot;)
       ),
   AND(
       INCLUDES(Fees_Responsible_For__c, &quot;Uniform&quot;),
       INCLUDES(Fees_Responsible_For__c, &quot;Uniform (Shared)&quot;)
       ),
   AND(
       INCLUDES(Fees_Responsible_For__c, &quot;Bus&quot;),
       INCLUDES(Fees_Responsible_For__c, &quot;Bus (Shared)&quot;)
       ),
   AND(
       INCLUDES(Fees_Responsible_For__c, &quot;EAL / Language Support&quot;),
       INCLUDES(Fees_Responsible_For__c, &quot;EAL / Language Support (Shared)&quot;)
       ),
   AND(
       INCLUDES(Fees_Responsible_For__c, &quot;Extra Programmes (ASAs etc.)&quot;),
       INCLUDES(Fees_Responsible_For__c, &quot;Extra Programmes (ASAs etc.) (Shared)&quot;)
       ),
   AND(
       INCLUDES(Fees_Responsible_For__c, &quot;Fee Required For Enrolment&quot;),
       INCLUDES(Fees_Responsible_For__c, &quot;Fee Required For Enrolment (Shared)&quot;)
       ),
   AND(
       INCLUDES(Fees_Responsible_For__c, &quot;Annual Enrolment&quot;),
       INCLUDES(Fees_Responsible_For__c, &quot;Annual Enrolment (Shared)&quot;)
       ),
   AND(
       INCLUDES(Fees_Responsible_For__c, &quot;Annual Capital Contribution&quot;),
       INCLUDES(Fees_Responsible_For__c, &quot;Annual Capital Contribution (Shared)&quot;)
       )
   )</errorConditionFormula>
        <errorMessage>You cannot state that a fee is both &apos;Shared&apos; and not shared in the &apos;Fees Responsible For&apos; field. e.g. you cannot include both &apos;Tuition&apos; &amp; &apos;Tuition (Shared)&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Fees_Responsible_For_Selection3</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   AND(
       OR(
          INCLUDES(Fees_Responsible_For__c, &quot;All Applicable&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;All Applicable (Shared)&quot;)
          ),
       INCLUDES(Fees_Responsible_For__c, &quot;None&quot;)
       ),
   AND(
       OR(
          INCLUDES(Fees_Responsible_For__c, &quot;All Applicable&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;All Applicable (Shared)&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;None&quot;)
          ),
       OR(
          INCLUDES(Fees_Responsible_For__c, &quot;Tuition&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;Tuition (Shared)&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;Lunch&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;Lunch (Shared)&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;Uniform&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;Uniform (Shared)&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;Bus&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;Bus (Shared)&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;EAL / Language Support&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;EAL / Language Support (Shared)&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;Extra Programmes (ASAs etc.)&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;Extra Programmes (ASAs etc.) (Shared)&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;Fee Required For Enrolment&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;Fee Required For Enrolment (Shared)&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;Annual Enrolment&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;Annual Enrolment (Shared)&quot;),
          INCLUDES(Fees_Responsible_For__c, &quot;Annual Capital Contribution&quot;), 
          INCLUDES(Fees_Responsible_For__c, &quot;Annual Capital Contribution (Shared)&quot;) 
          )
       )
   )</errorConditionFormula>
        <errorMessage>You cannot include &apos;All Applicable&apos;, &apos;All Applicable (Shared)&apos; or &apos;None&apos; in the &apos;Fees Responsible For&apos; field if you also have other options selected.</errorMessage>
    </validationRules>
</CustomObject>